[gd_scene load_steps=2 format=3 uid="uid://be3fxwx3g7bb1"]

[ext_resource type="Script" path="res://save.gd" id="1_uet8f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uet8f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Prompt" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 102.0
offset_top = 125.0
offset_right = 673.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 40
text = "Would you like to save your game?"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 14.0
offset_right = 258.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Save Game"

[node name="Yes" type="Button" parent="."]
layout_mode = 0
offset_left = 535.0
offset_top = 365.0
offset_right = 630.0
offset_bottom = 428.0
theme_override_font_sizes/font_size = 40
text = "Yes"

[node name="No" type="Button" parent="."]
layout_mode = 0
offset_left = 545.0
offset_top = 457.0
offset_right = 620.0
offset_bottom = 520.0
theme_override_font_sizes/font_size = 40
text = "No"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
